--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "vue-cli-service-test",
+    "lint": "vue-cli-service lint",
+    "build-bundle": "vue-cli-service build --target lib --name v-suggest-term ./src/components/index.js",
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.16",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "caret-pos": "^1.1.0",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
@@ -30,6 +35,7 @@
       "parser": "babel-eslint"
     }
   },
+  "eslintIgnore": ["dist"],
   "postcss": {
     "plugins": {
       "autoprefixer": {}
